--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           - python -m pip install pytest .
-          - python -m pip installimport pandas
+          - python -m pip install pandas
           - python -m pip install numpy
           - python -m pip install pickle
           - python -m pip install os
