--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -24,7 +24,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          - python -m pip install pytest . pandas numpy pickle os
+          pip install pytest
+          pip install pandas
+          pip install numpy
+          pip install pickle
+          pip install os
 
       - name: Run tests
         run: pytest
