--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           pip install pytest
           pip install pandas
           pip install numpy
