--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -30,7 +30,7 @@ jobs:
           pip install numpy
 
       - name : Install personal modules
-        run : import tools_dataframe.py
+        run : import OC_DS_P7_01_modeling/tools_dataframe.py
 
       - name: Run tests
         run: pytest
