--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -28,6 +28,7 @@ jobs:
           pip install pytest
           pip install pandas
           pip install numpy
+          pip install imbalanced-learn
 
       - name: Run tests
         run: pytest
