--- a/.github/workflows/OC_DS_P7_test_pipeline.yaml
+++ b/.github/workflows/OC_DS_P7_test_pipeline.yaml
@@ -29,6 +29,7 @@ jobs:
           pip install pandas
           pip install numpy
           pip install imbalanced-learn
+          pip install lightgbm
 
       - name: Run tests
         run: pytest
