--- a/OC_DS_P7_02_api_dashboard/requirements.txt
+++ b/OC_DS_P7_02_api_dashboard/requirements.txt
@@ -4,3 +4,8 @@ flask==2.2.2
 imbalanced-learn==0.11.0
 shap==0.42.1
 lightgbm==4.0.0
+streamlit==1.25.0
+matplotlib==3.6.0
+seaborn==0.12.0
+plotly==5.15.0
+ipython==8.14.0
